--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
