--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-redux": "^7.1.33",
@@ -33,14 +34,14 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
