--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-camera": "~15.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
