using zustand with expo-secure-store

--- a/sobaii-mobile/app.json
+++ b/sobaii-mobile/app.json
@@ -40,7 +40,8 @@
           "microphonePermission": "Allow sobaii to access your microphone",
           "recordAudioAndroid": true
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
