--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -24,6 +24,7 @@
     "expo-camera": "~15.0.10",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.15",
+    "expo-document-picker": "~12.0.1",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
@@ -32,6 +33,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
