--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -15,29 +15,30 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.2.2",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-redux": "^7.1.33",
-    "expo": "~51.0.9",
-    "expo-camera": "~15.0.10",
+    "expo": "~51.0.14",
+    "expo-camera": "~15.0.11",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.15",
-    "expo-document-picker": "~12.0.1",
+    "expo-dev-client": "~4.0.18",
+    "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
+    "expo-router": "~3.5.16",
     "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "google-protobuf": "^3.21.2",
     "grpc-web": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
@@ -45,7 +46,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-crypto": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
