--- a/sobaii-mobile/package.json
+++ b/sobaii-mobile/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.19.10",
     "zustand": "^4.5.2",
     "expo-crypto": "~13.0.2",
-    "expo-file-system": "~17.0.1"
+    "expo-file-system": "~17.0.1",
+    "@stripe/stripe-react-native": "0.37.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
